# silent-screen-label

./: .gitignore  README.md  README.zh.md  config.json  pyproject.toml
checkpoints/linear_probe_v20251118_1956/: model.csv  model.json  model.pth
docs/: linear-probe.md  test.md
screen_analysis/: config.py  main.py  menubar.py  zero_shot.py
screen_analysis/commands/: analyze.py  delete.py  run.py
screen_analysis/commands/studio/: app.py  cli.py
screen_analysis/tools/: linear_probe.py  model_eval.py  monitor_performance.py
